# AccelerateCFD_CE

./: .gitignore  AUTHORS  CHANGELOG  CITATION.cff  CMakeLists.txt  LICENSE  README.md  plotPOD.py
SampleCase/0/: U  k  nut  p  pMean  phi
SampleCase/constant/: transportProperties
SampleCase/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution
cmake/Modules/: FindOpenFOAM.cmake
podBasisCalc_master/: podBasisCalc.C
podBasisCalc_master/Make/: files
podBasisCalc_master/Make/linux64GccDPInt32Opt/: options  podBasisCalc.C.dep  sourceFiles  variables
podDict/: podDict
podFlowReconstruct_master/: podFlowReconstruct.C
podFlowReconstruct_master/Make/: files
podFlowReconstruct_master/Make/linux64GccDPInt32Opt/: podFlowReconstruct.C.dep  sourceFiles  variables
podPostProcess/: podPostProcess.C
podPostProcess/Make/: files  options
podPostProcess/Make/linux64GccDPInt32Opt/: options  podPostProcess.C.dep  sourceFiles  variables
podPrecompute_master/: podPrecompute.C
podPrecompute_master/Make/: files  options
podPrecompute_master/Make/linux64GccDPInt32Opt/: podPrecompute.C.dep  sourceFiles  variables
podROM_master/: podROM.cpp
utilities/: podBasisCalc.C  podFlowReconstruct.C  podPostProcess.C  podPrecompute.C  podROM.C
